<resources>
    <string name="app_name">Proludic Sport</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="empty_err_msg_name">Please enter your name.</string>
    <string name="empty_err_msg_username">Please enter a username.</string>
    <string name="empty_err_msg_password">Please enter a password.</string>
    <string name="empty_err_msg_email">Please enter an email address.</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="y">y</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="wrong_format_username">Username cannot contain invalid symbols or spaces.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must contain at least 1 uppercase letter, 1 lowercase letter and 1 number, and must be longer than 6 characters.</string>
    <string name="emails_must_match_err">Both email addresses must match.</string>
    <string name="passwords_must_match_err">Passwords must match.</string>
    <string name="username_taken_err">Sorry, this username has already been taken.</string>
    <string name="email_taken_err">Sorry, this email address has already been used.</string>
    <string name="invalid_creds_err">Invalid credentials</string>
    <string name="connection_needed_err">Sorry, internet access is needed.</string>
    <string name="technical_err_msg">Sorry, a technical error occurred. Please try again later.</string>
    <string name="email_doesnt_exist">Sorry, the email you\'ve entered doesn\'t exist.</string>
    <string name="enter_signed_up_email">Please enter the email address you signed up with.</string>
    <string name="enter_username">Enter your desired username.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="Reset">Reset</string>
    <string name="email_sent">Email Successfully sent.</string>
    <string name="back_button_exit">Tap back button again to exit.</string>
    <string name="login_activity_event">event-loginactivity</string>
    <string name="something_went_wrong">Oops, Something went wrong.</string>
    <string name="ok">OK</string>
    <string name="loggingIn">Logging in...</string>
    <string name="Facebook_login">Facebook Login..</string>
    <string name="facebook_login_cancel">Uh oh. The user cancelled the Facebook login.</string>
    <string name="facebook_new_user">User signed up and logged in through Facebook!</string>
    <string name="facebook_login_success">User logged in through Facebook!</string>
    <string name="SASHIDO_USER_NAME_KEY">name</string>
    <string name="SASHIDO_USER_LOGIN_KEY">login</string>
    <string name="SASHIDO_USER_PROFILE_PIC_KEY">profilePicture</string>
    <string name="logginInFacebook">Logging in with Facebook...</string>
    <string name="facebook_app_id">1755670184762470</string>
    <string name="default_search_hint">Browse</string>
    <string name="error">Error</string>
    <string name="alert_dialog_error">A technical error occurred. We\'re sorry about that.</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="logout_alert_dialog_message">Are you sure you would like to log out?</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="first_run_description">Welcome to Proludic Sport. Please wait whilst we personalise the app for you!</string>
    <string name="upgraded_run_description">Welcome back to Proludic Sport. We see you\'ve recently updated the application. \n Enjoy our new features!</string>
    <string name="normal_run_description">Welcome back to Proludic Sport. We\'re always happy to see you!</string>
    <string name="cancel">Cancel</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location is needed to use this application.</string>
    <string name="where_are_you">Where are you?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="workout_complete">Exercise Complete</string>
    <string name="personal_best">Personal Best</string>
    <string name="taptofinish">TAP TO FINISH</string>
    <string name="taptostart">TAP TO START</string>
    <string name="finishexercise">FINISH EXERCISE</string>
    <string name="completed_exercise_too_quickly">You have completed this exercise far too quickly for the designated reps. Unfortunately, you won\'t be receiving any hearts this time.</string>
    <string name="location_services">Location Services</string>
    <string name="reps">REPS</string>
    <string name="sets_reps">SETS X REPS</string>
    <string name="start_exercise">START EXERCISE</string>
    <string name="avg_time">AVG TIME</string>
    <string name="avg_time_per_set">AVG TIME PER SET</string>
    <string name="press_back_exercise">Press back again to cancel exercise.</string>
    <string name="back_pressed_app">Press back again to exit app.</string>
    <string name="taptoskip">TAP TO SKIP</string>
    <string name="findnearestpark">FIND NEAREST PARKS</string>
    <string name="edit">EDIT</string>
    <string name="your_stats">YOUR STATS</string>
    <string name="your_achievements">YOUR ACHIEVEMENTS</string>
    <string name="friends_achievements">FRIEND ACHIEVEMENTS</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="invite">INVITE</string>
    <string name="hearts_leaderboard">HEARTS LEADERBOARD</string>
    <string name="achievements_leaderboard">ACHIEVEMENTS LEADERBOARD</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="rest_time">REST TIME</string>
    <string name="weights">WEIGHT</string>
    <string name="nextexercise">NEXT EXERCISE</string>
    <string name="pauseworkout">PAUSE WORKOUT</string>
    <string name="resumeworkout">RESUME WORKOUT</string>
    <string name="stopexercise">STOP EXERCISE</string>
    <string name="startchallenge">Would you like to challenge</string>
    <string name="endchallenge">to a workout challenge?</string>
    <string name="hearts">HEARTS</string>
    <string name="save">SAVE PROFILE</string>
    <string name="challengeTitle">Choose Type of Challenge</string>
    <string name="confirm">Confirm</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="choosetimechallenge">Choose Time for Challenge</string>
    <string name="successchallengerequest">You have successfully sent a challenge request to </string>
    <string name="nouserexists">A user with that username doesn\'t exist. Please try again.</string>
    <string name="friendrequestfailed">Friend request failed, please try again.</string>
    <string name="friendrequestsuccess">Friend request sent.</string>
    <string name="enterdescription">Please enter a description</string>
    <string name="desctoolong">Your description is too long. The character limit is 140.</string>
    <string name="desctooshort">Your description is too short. The character limit is 20.</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="challengeweight">Weights</string>
    <string name="challengehearts">Hearts</string>
    <string name="general">General</string>
    <string name="community">Community</string>
    <string name="personal">Personal</string>
    <string name="post">Post</string>
    <string name="title">Thread Title</string>
    <string name="message">Message</string>
    <string name="report_user">Report Post</string>
    <string name="offensive_language">Offensive Language</string>
    <string name="spam_or_advertising">Spam/Advertising</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="reg_dob">Please select your date of birth.</string>
    <string name="hint_gender">Gender</string>
    <string name="reg_gender">Select your gender.</string>
    <string name="do_not_ask_again">Do not ask me again</string>
    <string name="continue_text">CONTINUE</string>
    <string name="caution">Caution!</string>
    <string name="hint_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="reg_terms_and_conditions">Please read our terms and conditions.</string>
    <string name="drugs_t_and_c">We recommend you do not use Proludic equipment if you are injured or taking pain-masking drugs, as this may cause further injury.</string>
    <string name="pregnancy_t_and_c">We recommend you do not use Proludic equipment whilst you are pregnant, as our equipment has not been designed with pregnancy in mind.</string>
    <string name="doctor_t_and_c">We recommend consulting a doctor if you have any medical conditions prior to exercising with Proludic equipment.</string>
    <string name="injury_t_and_c">We will not be held responsible for any injuries you may sustain from performing any of the exercises.</string>
    <string name="stretch_t_and_c">We always recommend you stretch before and after exercising to avoid injury.</string>
    <string name="forum_t_and_c">The forum on our app is self-managed by users who will report any misuse. We are not held responsible for comments posted in the forum.</string>
    <string name="i_agree_to_the_terms_and_conditions">I hereby agree to the terms and conditions set out by Proludic Sport.</string>
    <string name="different_equipment_question">Why is this equipment different to traditional outdoor gym equipment?</string>
    <string name="different_equipment_answer">The piston is bi-directional (on nearly all items of equipment), meaning that users are getting two workouts on one piece of equipment. They have to push to extend, and pull to return the unit to its starting position. The piston can also be adjusted so that you get a real gym feel, where you can exercise with a resistance higher than your own weight – this is inclusive and suitable for all abilities.</string>
    <string name="suitable_for_children_question">Can young children use this equipment?</string>
    <string name="suitable_for_children_answer">No, this equipment is only suitable for children aged 14+. The new EN16630 standard stipulates that children under the height of 1.4m should not be encouraged to undertake repetitive strain when exercising. Proludic Urbanix is tested to, and adheres to these rules. There should also be a minimum distance or barrier between a play area and any outdoor gym equipment.</string>
    <string name="find_out_more_question">How can I find out more about the equipment?</string>
    <string name="find_out_more_answer">Visit our website for full product information, or call our offices on 01159823980 to arrange a site visit with your local Area Sales Manager.</string>
    <string name="how_long_results_question">How long till I see results?</string>
    <string name="how_long_results_answer">For some, 30 days is enough time to see results, such as an increase in energy levels and toning, but for most it can take longer. A commitment to exercise for 30 days is a great first step towards an ongoing fitness campaign and a healthier lifestyle.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob_select_year">Select the year in the top-left to change it.</string>
</resources>