<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/drugs_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/pregnancy_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/doctor_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/injury_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/stretch_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <icn.proludic.widgets.CustomTrebucheTextView
            android:text="@string/forum_t_and_c"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

</LinearLayout>
