<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_e_reg"
        android:layout_width="50dp"
        android:src="@drawable/ic_gender"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp" />

    <icn.proludic.widgets.CustomTextView
        android:text="@string/hint_gender"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <icn.proludic.widgets.CustomTrebucheTextView
        android:text="@string/reg_gender"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"
            android:textColor="@color/black"
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:theme="@style/MyCheckBox"
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:text="@string/female" />

    </RadioGroup>

</LinearLayout>