<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/black80"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/thread_title_title"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/post_title_input"
        android:layout_width="match_parent"
        android:maxLines="2"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/thread_content_title"
        android:text="@string/message"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/post_content_input"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/colorPrimary"
        android:layout_height="100dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/btn_background"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/post_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/post"
            android:background="@drawable/btn_background"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>