<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_e_reg"
        android:layout_width="50dp"
        android:src="@drawable/ic_age"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        tools:ignore="ContentDescription" />

    <icn.proludic.widgets.CustomTextView
        android:text="@string/hint_dob"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <icn.proludic.widgets.CustomTrebucheTextView
        android:text="@string/reg_dob"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <icn.proludic.widgets.CustomTrebucheTextView
        android:text="@string/dob_select_year"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <DatePicker
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:scaleX="0.85"
        android:scaleY="0.85"
        android:layout_height="wrap_content"/>

</LinearLayout>